--- a/new.css
+++ b/new.css
@@ -4,6 +4,20 @@
 /* ************************** */
 /* **********Global********** */
 /* ************************** */
+
+:root {
+    --hover-color: white;
+    --header-text-color: #e7ecff;
+    --main-text-color: #e0eaff;
+    --hyperlink-text-color: #b2d4ee;
+    --main-bg-color: #46444d;
+    --green-color: #8ed538;
+    --ColHeadGrad: url(https://i.imgur.com/X0e9JD9.png);
+    --ColHead: url(https://i.imgur.com/dpSJApj.png)
+    --slightly-visible: rgba(69, 71, 81, 0.75);
+    
+}
+
 * {
     padding: 0em;
     margin: 0em;}
@@ -898,17 +912,17 @@ div.sidebar #event_div {
 	left: 1px;}
 
 .sidebar .box .head, .sidebar .box .head a  {
-	background-image:url('images/ColHead.png');
+	background-image: url('https://i.imgur.com/dpSJApj.png');
 	background-repeat: no-repeat;
 	text-align:center;
 	line-height:25px;
 	font-family:Arial;
 	font-size:12px;
-	color:#cef6ff;
+	color:var(--header-text-color);
 	text-decoration:none;
 	font-weight:bold;
-	-webkit-border-top-right-radius:8px;
-	-webkit-border-top-left-radius:8px;
+    	-webkit-border-top-right-radius: 0px;
+    	-webkit-border-top-left-radius: 0px;
 	-moz-border-radius-topright:8px;
 	-moz-border-radius-topleft:8px;}
 
@@ -921,7 +935,7 @@ div.sidebar #event_div {
 .sidebar .box a:hover {border-bottom-color:#CCC;}
 
 .main_column .box .head {
-	background-image: url('images/MainHeader.png');
+	background-image: url('https://i.imgur.com/dow1sqm.png');
 	height: 48px;
 	width: 735px;
 	background-repeat: no-repeat;
