--- a/new.css
+++ b/new.css
@@ -125,7 +125,7 @@ tr a:hover {
 	text-decoration:underline;}
 
 .colhead, .colhead_dark {
-    background: url("images/ColHeadGrad.png") repeat-x scroll 0 center transparent;
+    background: url("https://i.imgur.com/X0e9JD9.png") repeat-x scroll 0 center transparent;
     color: #FFFFFF;
 	font-size:7ipt;
     font-weight: 700;
