--- a/new.css
+++ b/new.css
@@ -1,5 +1,5 @@
-@import url(../game_room/caticons.css);
-@import url(../game_room/webLinks.css);
+@import url(https://gazellegames.net/static/styles/game_room/caticons.css);
+@import url(https://gazellegames.net/static/styles/game_room/webLinks.css);
 
 /* ************************** */
 /* **********Global********** */
