--- a/new.css
+++ b/new.css
@@ -488,7 +488,7 @@ div.sidebar #event_div {
 	left: 0;}
 
 #menu ul li a {										/*Content and hover look*/
-	background: url('https://i.imgur.com/9qq9Po0.png') no-repeat scroll right bottom transparent;
+	background: url('https://i.imgur.com/JXRzeyk.png') no-repeat scroll right bottom transparent;
 	font-family: Helvetica, Arial, Sans-serif;
 	font-weight: bold;
 	font-size: 12px;
@@ -500,7 +500,7 @@ div.sidebar #event_div {
 	line-height: 57px;
 	width: 94px;}
 #menu ul li a:hover {
-	background: url('https://i.imgur.com/9qq9Po0.png') no-repeat scroll right top transparent;
+	background: url('https://i.imgur.com/JXRzeyk.png') no-repeat scroll right top transparent;
 	position: relative;
 	top: 0;
 	left: 0;}
