--- a/new.css
+++ b/new.css
@@ -126,7 +126,7 @@ tr a:hover {
 #header {
 	width: 100%;
 	height: 420px;
-	background: url('images/HeaderBG.png') repeat-x;}
+	background: url('https://i.imgur.com/nXiJbf4.png') repeat-x;}
 #header .sub {
     height: 1px;
     left: 50px;
@@ -394,7 +394,7 @@ div.sidebar #event_div {
     background-image: url("https://i.imgur.com/MNCKgVr.png");
     border-style: hidden;
     border-width: 0;
-    color: #CEF6FF;
+    color: #e0eaff;
     height: 21px;
     line-height: 25px;
     padding-left: 7px;
@@ -441,7 +441,7 @@ div.sidebar #event_div {
 #logo {
 	width: 964px;
 	height: 206px;
-	background: url('images/Logo.png') no-repeat top left;
+	background: url('https://i.imgur.com/msYGTwK.png') no-repeat top left;
 	position: absolute;
 	top: 34px;
 	left: 0;
@@ -711,7 +711,7 @@ div.sidebar #event_div {
 	position: absolute;
 	bottom: 0;
 	left: 0;
-	color: #cef6ff;
+	color: #e0eaff;
 	width: 100%;
 	height: 254px;
 	background-image: url('images/FooterBG.png');
@@ -826,7 +826,7 @@ div.sidebar #event_div {
 	background-color: #264059;
 	margin-bottom: 15px;
 	font-family: Arial, sans-serif;
-	color:#cef6ff;
+	color:#e0eaff;
 	-webkit-border-radius:8px;
 	-moz-border-radius:8px;}
 
@@ -904,7 +904,7 @@ div.sidebar #event_div {
 	line-height:25px;
 	font-family:Arial;
 	font-size:12px;
-	color:#cef6ff;
+	color:#e0eaff;
 	text-decoration:none;
 	font-weight:bold;
 	-webkit-border-top-right-radius:8px;
@@ -915,7 +915,7 @@ div.sidebar #event_div {
 .sidebar .box ul {padding:1em;}
 .sidebar .box ol {padding:1em;}
 .sidebar .box a {
-	color:#CEF6FF;
+	color:#e0eaff;
 	text-decoration:none;
 	border-bottom:1px dotted #2c4b66;}
 .sidebar .box a:hover {border-bottom-color:#CCC;}
@@ -970,7 +970,7 @@ div.sidebar #event_div {
 	position:relative;}
 
 #main_column_bottom  {
-	background-image:url("images/MainBodyBottom.png");
+	background-image:url("https://i.imgur.com/Ka3nw3E.png");
 	height:272px;
 	width:762px;
 	z-index:2;
@@ -979,7 +979,7 @@ div.sidebar #event_div {
 	bottom: 0px;}
 
 #main_column_top  {
-	background-image:url("images/MainBodyTop.png");
+	background-image:url("https://i.imgur.com/pfijbD7.png");
 	height:595px;
 	position:absolute;
 	width:762px;
@@ -991,7 +991,7 @@ div.sidebar #event_div {
 	background: none;}
 
 .main_column .box .pad {
-	color: #CEF6FF;
+	color: #e0eaff;
 	margin-left: 15px;
 	font-family: Helvetica, Verdana, Arial;
 	font-size: 9pt;}
@@ -2468,7 +2468,7 @@ td.cats_col {
 	width: 100%;
 	font-family: Arial;
 	font-size: 12px;
-	color: #CEF6FF;
+	color: #e0eaff;
 	text-decoration: none;
 	font-weight: bold;}
 
