--- a/new.css
+++ b/new.css
@@ -73,7 +73,7 @@ table {
     border-style: hidden solid solid hidden;
     border-width: medium 1px 1px medium;
     width: 100%;
-	background:url("images/companioncube-blue.png");
+	background:url("https://i.imgur.com/RxVlRmO.png");
 	border-left: 1px solid #565a6a;}
 table.border {border: 1px solid #355676;}
 table.border td {
@@ -533,7 +533,7 @@ div.sidebar #event_div {
 	clear: both;
 	margin-right: 10px;}
 #userinfo #userinfo_username .donateico  {
-	background-image:url('images/NavUserIcons.png');
+	background-image:url('https://i.imgur.com/IaJkcU6.png');
 	background-repeat:no-repeat;
 	background-position:0px -158px;
 	padding-left:20px;
@@ -634,52 +634,52 @@ div.sidebar #event_div {
 	top:1px;
 	left:1px;}
 #userinfo #userinfo_minor .inboxico {
-	background-image: url('images/NavUserIcons.png');
+	background-image: url('https://i.imgur.com/IaJkcU6.png');
 	background-repeat: no-repeat;
 	background-position: 0px 2px;
 	padding-left: 20px;}
 #userinfo #userinfo_minor .torrentsico {
-	background-image: url('images/NavUserIcons.png');
+	background-image: url('https://i.imgur.com/IaJkcU6.png');
 	background-repeat: no-repeat;
 	background-position: 0px -118px;
 	padding-left: 20px;}
 #userinfo #userinfo_minor .bookmarksico {
-	background-image: url('images/NavUserIcons.png');
+	background-image: url('https://i.imgur.com/IaJkcU6.png');
 	background-repeat: no-repeat;
 	background-position: 0px -58px;
 	padding-left: 20px;}
 #userinfo #userinfo_minor .notificationsico {
-	background-image: url('images/NavUserIcons.png');
+	background-image: url('https://i.imgur.com/IaJkcU6.png');
 	background-repeat: no-repeat;
 	background-position: 0px -179px;
 	padding-left: 20px;}
 #userinfo #userinfo_minor .postsico {
-	background-image: url('images/NavUserIcons.png');
+	background-image: url('https://i.imgur.com/IaJkcU6.png');
 	background-repeat: no-repeat;
 	background-position: 0px -98px;
 	padding-left: 20px;}
 #userinfo #userinfo_minor .commentsico {
-	background-image: url('images/NavUserIcons.png');
+	background-image: url('https://i.imgur.com/IaJkcU6.png');
 	background-repeat: no-repeat;
 	background-position: 0px -36px;
 	padding-left: 20px;}
 #userinfo #userinfo_minor .friendsico {
-	background-image: url('images/NavUserIcons.png');
+	background-image: url('https://i.imgur.com/IaJkcU6.png');
 	background-repeat: no-repeat;
 	background-position: 0px -138px;
 	padding-left: 20px;}
 #userinfo #userinfo_minor .uploadico {
-	background-image: url('images/NavUserIcons.png');
+	background-image: url('https://i.imgur.com/IaJkcU6.png');
 	background-repeat: no-repeat;
 	background-position: 0px -78px;
 	padding-left: 20px;}
 #userinfo #userinfo_minor .inviteico {
-	background-image: url('images/NavUserIcons.png');
+	background-image: url('https://i.imgur.com/IaJkcU6.png');
 	background-repeat: no-repeat;
 	background-position: 0px -18px;
 	padding-left: 20px;}
 #userinfo #userinfo_minor .staffico {
-    background-image: url('images/NavUserIcons.png');
+    background-image: url('https://i.imgur.com/IaJkcU6.png');
     background-repeat: no-repeat;
     background-position: 0px -297px;
     padding-left: 20px;}
@@ -837,7 +837,7 @@ div.sidebar #event_div {
 
 .sidebar .box .head .pollhead li {
 	display:inline;
-	background-image:url("images/NavUserIcons.png");
+	background-image:url("https://i.imgur.com/IaJkcU6.png");
 	background-repeat:no-repeat;
 	background-position:left -200px;
 	line-height: 25px;
@@ -849,7 +849,7 @@ div.sidebar #event_div {
 	padding:0;}
 
 .sidebar .box .head .statistics_head li {
-	background-image:url('images/NavUserIcons.png');
+	background-image:url('https://i.imgur.com/IaJkcU6.png');
 	background-repeat:no-repeat;
 	background-position:left -220px;
 	display:inline;
@@ -1455,7 +1455,7 @@ tr.group:hover {background-color: rgba(24, 59, 88, 0.8);}
         border-bottom: 1px solid #596976;}
 
 .torrent_table a.addbookmark {														/*Bookmark icon*/
-    background-image: url("images/NavUserIcons.png");
+    background-image: url("https://i.imgur.com/IaJkcU6.png");
     background-position: 0 -259px;
     background-repeat: no-repeat;
     color: #000;
@@ -1464,7 +1464,7 @@ tr.group:hover {background-color: rgba(24, 59, 88, 0.8);}
     text-indent: -1000px;
     padding-left: 16px;}
 .torrent_table a.removebookmark {
-    background-image: url("images/NavUserIcons.png");
+    background-image: url("https://i.imgur.com/IaJkcU6.png");
     background-position: 0 -281px;
     background-repeat: no-repeat;
     color: #000;
@@ -2305,7 +2305,7 @@ td.cats_col {
    	background-color:transparent;}
 
 #bookmarks table {
-	background: url("images/companioncube-blue.png") repeat-y scroll center top;
+	background: url("https://i.imgur.com/RxVlRmO.png") repeat-y scroll center top;
    	background-color: rgba(27, 47, 63, 0.55);
 	border: #565a6a solid 1px;
     width: 760px;}
@@ -2619,7 +2619,7 @@ ul.collage_images img {
 
 /* Browse Page */
 .collections_art_display {
-        background: url('images/companioncube-blue.png') !important;
+        background: url('https://i.imgur.com/RxVlRmO.png') !important;
 }
 .collections_art_display td {
 	position: relative;
@@ -2635,7 +2635,7 @@ ul.collage_images img {
         background: none;
 }
 #collections #content .center table {
-        background: url('images/companioncube-blue.png') !important;
+        background: url('https://i.imgur.com/RxVlRmO.png') !important;
 }
 .hovereffect {
   width: 100%;
@@ -2934,7 +2934,7 @@ ul.collage_images img {
 	border: 1px solid rgba(255, 255, 255, 0.3);}
 
 #tools #content .permission_container  {
-	background: url("images/companioncube-blue.png") repeat-y center bottom;
+	background: url("https://i.imgur.com/RxVlRmO.png") repeat-y center bottom;
 	float:left;
 	margin-right:20px;
 	width: 228px;
@@ -2984,7 +2984,7 @@ ul.collage_images img {
 	width: 475px;}
 
 #wiki .main_column {
-    background: url("images/companioncube-blue.png") repeat scroll -3px 0 transparent;
+    background: url("https://i.imgur.com/RxVlRmO.png") repeat scroll -3px 0 transparent;
     border-radius: 15px 15px 15px 15px;
 	border: 1px #565a6a solid;
     margin-left: 0px;
@@ -3363,7 +3363,7 @@ ul .invitetree {margin: 0px 0px 0px 25px;}
 /* ************************* */
 
 .gazelles_art_display {
-        background: url('images/companioncube-blue.png') !important;
+        background: url('https://i.imgur.com/RxVlRmO.png') !important;
 }
 .gazelles_art_display td {
         border: none;
